finished help signs (double-click to edit), fixed two line-wrapping bugs in both editor and game

--- a/editor/www/style.css
+++ b/editor/www/style.css
@@ -188,10 +188,10 @@ body {
 	position: absolute;
 	top: 50%;
 	left: 50%;
-	width: 200px;
-	margin-left: -100px;
+	width: 250px;
+	margin-left: -125px;
 	text-align: center;
-	background: rgba(0, 0, 0, 0.25);
+	background: rgba(0, 0, 0, 0.5);
 	color: white;
 	border-radius: 10px;
 	font: bold 20px/40px Helvetica, Arial, sans-serif;
@@ -211,14 +211,16 @@ body {
 }
 
 #sign-text-modal {
+	z-index: 4;
 	display: none;
 	position: absolute;
-	top: 0;
+	top: -115px;
 	left: 50%;
 	width: 300px;
+	height: 95px;
 	margin-left: -173px;
 	background: #EFEFEF;
-	padding: 20px 27px 20px 20px;
+	padding: 20px 27px 0 20px;
 	box-shadow: 0 5px 20px rgba(0, 0, 0, 0.5);
 	-o-box-shadow: 0 5px 20px rgba(0, 0, 0, 0.5);
 	-moz-box-shadow: 0 5px 20px rgba(0, 0, 0, 0.5);
@@ -227,10 +229,12 @@ body {
 
 #sign-text {
 	width: 100%;
+	padding: 1px 0;
 	margin: 8px 0 10px 0;
 }
 
-#sign-text-modal a {
+#sign-text-modal button {
+	font-size: 11px;
 	border: 1px solid #7F7F7F;
 	margin-right: 7px;
 	display: inline-block;
@@ -240,18 +244,18 @@ body {
 	background: #D7D7D7;
 	background: -moz-linear-gradient(#FFFFFF, #EFEFEF 25%, #E7E7E7 75%, #D7D7D7);
 	background: -webkit-gradient(linear, left top, left bottom, from(#FFFFFF), color-stop(0.25, #EFEFEF), color-stop(0.75, #E7E7E7), to(#D7D7D7));
-	box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
-	-o-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
-	-moz-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
-	-webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+	box-shadow: 0 1px 0 #CFCFCF;
+	-o-box-shadow: 0 1px 0 #CFCFCF;
+	-moz-box-shadow: 0 1px 0 #CFCFCF;
+	-webkit-box-shadow: 0 1px 0 #CFCFCF;
 	text-shadow: 0 1px 0 #F7F7F7;
 }
 
-#sign-text-modal a:active {
-	color: white;
-	text-shadow: 0 1px 0 #1F5F8F;
-	border-color: #1F5F8F;
-	background: #4787CF;
-	background: -moz-linear-gradient(#579FDF, #4787CF 50%, #2F7FBF);
-	background: -webkit-gradient(linear, left top, left bottom, from(#579FDF), color-stop(0.5, #4787CF), to(#2F7FBF));
+#sign-text-modal button:active, .sign-text-active {
+	color: white !important;
+	text-shadow: 0 1px 0 #1F5F8F !important;
+	border-color: #1F5F8F !important;
+	background: #4787CF !important;
+	background: -moz-linear-gradient(#579FDF, #4787CF 50%, #2F7FBF) !important;
+	background: -webkit-gradient(linear, left top, left bottom, from(#579FDF), color-stop(0.5, #4787CF), to(#2F7FBF)) !important;
 }
